src/test/ui/lifetimes/issue-103762-3.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-103762-3.rs:10:8
   |
LL |     -> &str { loop {} }
   |        ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL |     -> &'static str { loop {} }
   |         +++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
